--- a/viajes.html
+++ b/viajes.html
@@ -174,6 +174,8 @@
     </section> 
    </div>    
         <div class="separador"></div>
+</div>
+
 
     <div class="fincompra">
       <h2 style="color:rgb(49, 0, 88);">Total de la compra</h2>
