--- a/viajes.html
+++ b/viajes.html
@@ -175,9 +175,7 @@
    </div>    
         <div class="separador"></div>
 </div>
-
-
-    <div class="fincompra">
+<div class="fincompra">
       <h2 style="color:rgb(49, 0, 88);">Total de la compra</h2>
       <td>
         <div id="items-list">
@@ -189,17 +187,16 @@
             <button id="checkout-button">Comprar</button>
           </div>
           <hr>
-         
-          <footer id="footer">
-            <p>Síguenos en nuestras redes sociales:</p>
-            <nav>
+</div>  
+<footer id="footer">
+            <h5>Síguenos en nuestras redes sociales:</h5>
+            <br>
               <ul>
                 <li><a href="https://www.facebook.com/turismoviajes">Facebook</a></li>
                 <li><a href="https://twitter.com/turismoviajes">Twitter</a></li>
                 <li><a href="https://www.instagram.com/turismoviajes">Instagram</a></li>
-              </ul>
-            </nav>
-          </footer>
+              </ul>          
+</footer>
 <script src="js/carritodecompras.js"></script>
 </body>
 </html>
