--- a/viajes.html
+++ b/viajes.html
@@ -63,7 +63,7 @@
         <li><b>ALLINCLUSIVE!! </b>(TODO) <br></br>Todo incluido, sin limites. No te preocupes mas - $8.500,00
           <button class="boton-estilo" onclick="addToCart(8)">Agregar al carrito</button></li>
       </div>
-      <div class="container">
+      <div class="item">
         <p><b>Termina tu compra!!</b></p>
         <a href="#footer" class="boton">Ir al carrito</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </div></ul> 
