--- a/viajes.html
+++ b/viajes.html
@@ -63,11 +63,13 @@
         <li><b>ALLINCLUSIVE!! </b>(TODO) <br></br>Todo incluido, sin limites. No te preocupes mas - $8.500,00
           <button class="boton-estilo" onclick="addToCart(8)">Agregar al carrito</button></li>
       </div>
-      <div class="item">
-        <p><b>Termina tu compra!!</b></p>
-        <a href="#footer" class="boton">Ir al carrito</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <div class="itemboton">
+        <p style="padding-left: 0.2em;"><b>Termina tu compra!!</b></p>
+        
+        <a href="#footer" class="boton-estilo-carrito">Ir al carrito</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </div></ul> 
     </div> 
+    <br>
       <section class="carrusel">
         <img src="/img/Viajes/Cancun/cancun1.jpg">        
         <img src="img/Viajes/Cancun/cancun2.jpg">
