--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Roboto">
-    <link rel="stylesheet" href="css/estiloinicio.css">
+    <link rel="stylesheet" href="../css/estiloinicio.css">
     <link rel="icon" type="image/x-icon" href="img/travel.ico">
     <title>Agencia de Viajes</title>
 </head>
@@ -16,7 +16,7 @@
     </nav>
     <main class="inicio">
         <div class="inicio">
-            <a href="viajes.html" class="texto">Haga click para comenzar su viaje!</a>
+            <a href="../viajes.html" class="texto">Haga click para comenzar su viaje!</a>
         </div>
     </main>
 </header>
