--- a/recomendaciones.html
+++ b/recomendaciones.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
     <title>Recomendaciones</title>
 </head>
 <header>
@@ -18,10 +18,10 @@
         <h1>Turismo Viajes</h1>
           
               <ul>
-                  <li><a href="viajes.html">Viajes</a></li>
-                  <li><a href="nosotros.html">Nosotros</a></li>
-                  <li><a href="recomendaciones.html">Recomendaciones</a></li>
-                  <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="../viajes.html">Viajes</a></li>
+                <li><a href="../nosotros.html">Nosotros</a></li>
+                <li><a href="../recomendaciones.html">Recomendaciones</a></li>
+                <li><a href="../contacto.html">Contacto</a></li>
               </ul>
           
         </div>
