--- a/viajes.html
+++ b/viajes.html
@@ -7,19 +7,19 @@
     <title>Viajes</title>
     <link rel="icon" type="image/x-icon" href="img/travel.ico">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Roboto">
-    <link rel="stylesheet" href="../css/estilo.css">
-    <link rel="stylesheet" href="../css/boton.css">
-    <link rel="stylesheet" href="../css/moveralcarrito.css"
+    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="/css/boton.css">
+    <link rel="stylesheet" href="/css/moveralcarrito.css"
         
 </head>
 <body background="img/Fondo.jpg">
         <div class="menu-inicio">
           <h1>Turismo Viajes</h1>
                 <ul>
-                  <li><a href="../viajes.html">Viajes</a></li>
-                  <li><a href="../nosotros.html">Nosotros</a></li>
-                  <li><a href="../recomendaciones.html">Recomendaciones</a></li>
-                  <li><a href="../contacto.html">Contacto</a></li>
+                  <li><a href="/viajes.html">Viajes</a></li>
+                  <li><a href="/nosotros.html">Nosotros</a></li>
+                  <li><a href="/recomendaciones.html">Recomendaciones</a></li>
+                  <li><a href="/contacto.html">Contacto</a></li>
                 </ul>
           </div>
 
@@ -71,7 +71,7 @@
     </div> 
     <br>
       <section class="carrusel">
-        <img src="/img/Viajes/Cancun/cancun1.jpg">        
+        <img src="img/Viajes/Cancun/cancun1.jpg">        
         <img src="img/Viajes/Cancun/cancun2.jpg">
         <img src="img/Viajes/Cancun/cancun3.jpg">
         <img src="img/Viajes/Cancun/cancun4.jpg">
