--- a/contacto.html
+++ b/contacto.html
@@ -71,10 +71,10 @@ main{
         <h1>Turismo Viajes</h1>
           
               <ul>
-                  <li><a href="/viajes.html">Viajes</a></li>
-                  <li><a href="/nosotros.html">Nosotros</a></li>
-                  <li><a href="/recomendaciones.html">Recomendaciones</a></li>
-                  <li><a href="/contacto.html">Contacto</a></li>
+                  <li><a href="viajes.html">Viajes</a></li>
+                  <li><a href="nosotros.html">Nosotros</a></li>
+                  <li><a href="recomendaciones.html">Recomendaciones</a></li>
+                  <li><a href="contacto.html">Contacto</a></li>
               </ul>
           
         </div>
