--- a/nosotros.html
+++ b/nosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
     <header>
@@ -15,10 +15,10 @@
           <h1>Turismo Viajes</h1>
             
                 <ul>
-                    <li><a href="/viajes.html">Viajes</a></li>
-                    <li><a href="/nosotros.html">Nosotros</a></li>
-                    <li><a href="/recomendaciones.html">Recomendaciones</a></li>
-                    <li><a href="/contacto.html">Contacto</a></li>
+                    <li><a href="viajes.html">Viajes</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="recomendaciones.html">Recomendaciones</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
           </div>
       </header> 
