--- a/recomendaciones.html
+++ b/recomendaciones.html
@@ -18,10 +18,10 @@
         <h1>Turismo Viajes</h1>
           
               <ul>
-                <li><a href="viajes.html">Viajes</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="recomendaciones.html">Recomendaciones</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                  <li><a href="viajes.html">Viajes</a></li>
+                  <li><a href="nosotros.html">Nosotros</a></li>
+                  <li><a href="recomendaciones.html">Recomendaciones</a></li>
+                  <li><a href="contacto.html">Contacto</a></li>
               </ul>
           
         </div>
@@ -31,7 +31,7 @@
         <section class="recomendaciones">
             <article class="recomendacion">
                 <figure class="foto">
-                    <img src="/img/gettyrf_477377417.jpg" width="400px" alt="400px">
+                    <img src="img/gettyrf_477377417.jpg" width="400px" alt="400px">
                     <div class="contenido">
                         <h2>carta1</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit ea optio labore sequi libero rerum neque. In neque illo impedit ratione voluptatibus! Non magni quam praesentium dolorum quidem facere harum?</p>
@@ -40,7 +40,7 @@
             </article>
             <article class="recomendacion">
                 <figure class="foto">
-                    <img src="/img/gettyrf_477377417.jpg" width="400px" alt="400px">
+                    <img src="img/gettyrf_477377417.jpg" width="400px" alt="400px">
                     <div class="contenido">
                         <h2>carta1</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit ea optio labore sequi libero rerum neque. In neque illo impedit ratione voluptatibus! Non magni quam praesentium dolorum quidem facere harum?</p>
@@ -49,7 +49,7 @@
             </article>
             <article class="recomendacion">
                 <figure class="foto">
-                    <img src="/img/gettyrf_477377417.jpg" width="400px" alt="400px">
+                    <img src="img/gettyrf_477377417.jpg" width="400px" alt="400px">
                     <div class="contenido">
                         <h2>carta1</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit ea optio labore sequi libero rerum neque. In neque illo impedit ratione voluptatibus! Non magni quam praesentium dolorum quidem facere harum?</p>
@@ -58,7 +58,7 @@
             </article>
             <article class="recomendacion">
                 <figure class="foto">
-                    <img src="/img/gettyrf_477377417.jpg" width="400px" alt="400px">
+                    <img src="img/gettyrf_477377417.jpg" width="400px" alt="400px">
                     <div class="contenido">
                         <h2>carta1</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit ea optio labore sequi libero rerum neque. In neque illo impedit ratione voluptatibus! Non magni quam praesentium dolorum quidem facere harum?</p>
