--- a/contacto.html
+++ b/contacto.html
@@ -39,13 +39,13 @@
                 <input type="text" id="nombre" name="nombre" class="form-control"  >
                 <br>
                 <label for="email" class="">Apellido</label>
-                <input type="text" id="apellido" name="apellido" class="form-control" required>
+                <input type="text" id="apellido" name="apellido" class="form-control" >
                 <br>
                     <label for="email" class="">Email</label>
-                    <input type="text" id="email" name="email" class="form-control" required>
+                    <input type="text" id="email" name="email" class="form-control" >
                 <br>
                     <label for="email" class="">Telefono</label>
-                    <input type="text" id="telefono" name="telefono" class="form-control" required>
+                    <input type="text" id="telefono" name="telefono" class="form-control" >
             </div>
             <br>
                 <button class="btn btn-primary" type="submit">Enviar</button>
