--- a/recomendaciones.html
+++ b/recomendaciones.html
@@ -33,8 +33,23 @@
                 <figure class="foto">
                     <img src="img/gettyrf_477377417.jpg" width="400px" alt="400px">
                     <div class="contenido">
-                        <h2>carta1</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit ea optio labore sequi libero rerum neque. In neque illo impedit ratione voluptatibus! Non magni quam praesentium dolorum quidem facere harum?</p>
+                        <h2>Pedro Andrada</h2>
+                        <p>Lo que distingue a TURISMO VIAJES es su enfoque integral y detallado en la planificación 
+                          de paquetes turísticos. Ya sea que estén buscando unas vacaciones relajantes en la playa o una aventura llena de adrenalina en la montaña 
+                           TURISMO VIAJES sabe cómo crear experiencias únicas y memorables. Durante años, he tenido el placer de trabajar con ellos y puedo dar fe de 
+                           su excelencia en el sector.</p>
+                </figure>
+            </article>
+            <article class="recomendacion">
+                <figure class="foto">
+                    <img src="img/gettyrf_477377417.jpg" width="400px" alt="400px">
+                    <div class="contenido">
+                        <h2>Laura Gomez</h2>
+                        <p>No puedo dejar de mencionar la pasión de TURISMO VIAJES por la sostenibilidad y 
+                           la responsabilidad social. La empresa se compromete activamente a minimizar el impacto 
+                           ambiental de sus actividades y promueve el turismo responsable. Trabajar con 
+                           TURISMO VIAJES no solo garantiza una experiencia de viaje excepcional, sino que 
+                           también contribuye a preservar los destinos turísticos.</p>
                     </div>
                 </figure>
             </article>
@@ -42,8 +57,11 @@
                 <figure class="foto">
                     <img src="img/gettyrf_477377417.jpg" width="400px" alt="400px">
                     <div class="contenido">
-                        <h2>carta1</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit ea optio labore sequi libero rerum neque. In neque illo impedit ratione voluptatibus! Non magni quam praesentium dolorum quidem facere harum?</p>
+                        <h2>Pedro Gonzalez</h2>
+                        <p>Recomendaría encarecidamente la página web de TURISMO VIAJES a cualquier persona que 
+                           esté buscando una agencia de viajes confiable y profesional. Su dedicación a la excelencia,
+                           combinada con su enfoque personalizado y su compromiso con la sostenibilidad, los convierte
+                           en una opción sobresaliente en el mercado de los paquetes turísticos.</p>
                     </div>
                 </figure>
             </article>
@@ -51,8 +69,12 @@
                 <figure class="foto">
                     <img src="img/gettyrf_477377417.jpg" width="400px" alt="400px">
                     <div class="contenido">
-                        <h2>carta1</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit ea optio labore sequi libero rerum neque. In neque illo impedit ratione voluptatibus! Non magni quam praesentium dolorum quidem facere harum?</p>
+                        <h2>Maria Schulls</h2>
+                        <p>Me complace escribir esta carta de recomendación para la página web de TURISMO VIAJES, una 
+                           empresa destacada en la industria de los paquetes turísticos. Durante muchos años, he tenido
+                           el placer de trabajar con ellos y puedo dar fe de su excelencia en el sector.
+                           TURISMO VIAJES ha demostrado un compromiso excepcional con la satisfacción del cliente. 
+                           </p>
                     </div>
                 </figure>
             </article>
@@ -60,17 +82,21 @@
                 <figure class="foto">
                     <img src="img/gettyrf_477377417.jpg" width="400px" alt="400px">
                     <div class="contenido">
-                        <h2>carta1</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit ea optio labore sequi libero rerum neque. In neque illo impedit ratione voluptatibus! Non magni quam praesentium dolorum quidem facere harum?</p>
+                        <h2>Jorge Negredo</h2>
+                        <p>La atención al cliente de TURISMO VIAJES es impecable. Su personal es amable,
+                            atento y siempre está dispuesto a brindar asistencia en cada etapa del proceso de viaje. Desde la 
+                            elección del destino hasta la reserva de alojamiento y la coordinación de actividades, su equipo se
+                            asegura de que los clientes se sientan respaldados y seguros en todo momento.</p>
                     </div>
                 </figure>
             </article>
         </section>
     </main>
     <footer id="footer">
-        <h4>Horarios de Atencion: 8hrs a 17hrs</h4> 
-        <h4>Telefono: 011 456 45556</h4>
-        <h4>contact@turismoviajes.com</h4>
+        <h4 style="color: darkblue;">Horarios de Atencion: 8hrs a 17hrs</h4> &nbsp;
+        <h4 style="color: blue;">Telefono: 011 456 45556</h4> &nbsp;
+        <h4 style="color: blue;">contact@turismoviajes.com</h4>
      </footer> 
 </body>
 </html>
+
