--- a/viajes.html
+++ b/viajes.html
@@ -194,15 +194,13 @@
           </div>
           <br>
 </div>  
-<footer id="footer">
-            <h5>Síguenos en nuestras redes sociales:</h5>
-            <br>
-              <ul>
-                <li><a href="https://www.facebook.com/turismoviajes">Facebook</a></li>
-                <li><a href="https://twitter.com/turismoviajes">Twitter</a></li>
-                <li><a href="https://www.instagram.com/turismoviajes">Instagram</a></li>
-              </ul>          
-</footer>
+
+  <footer id="footer">
+    <h4 style="color: darkblue;">Horarios de Atencion: 8hrs a 17hrs</h4> &nbsp;
+    <h4 style="color: blue;">Telefono: 011 456 45556</h4> &nbsp;
+    <h4 style="color: blue;">contact@turismoviajes.com</h4>
+ </footer>       
+
 <script src="js/carritodecompras.js"></script>
 </body>
 </html>
