--- a/recomendaciones.html
+++ b/recomendaciones.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="img/travel.ico">
-
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Roboto">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">
@@ -147,6 +147,7 @@
             
         </section>
     </main>
+    <br>
     <footer id="footer">
         <h4 style="color: darkblue;">Horarios de Atencion: 8hrs a 17hrs</h4> &nbsp;
         <h4 style="color: blue;">Telefono: 011 456 45556</h4> &nbsp;
