--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 <body>
 <header>
     <nav>
+        
         <h1 class="entrada">BIENVENIDO A TURISMO VIAJES</h1> 
+       
     </nav>
     <main class="inicio">
         <div class="inicio">
             <a href="viajes.html" class="texto">Haga click para comenzar su viaje!</a>
         </div>
+        <button onclick="window.location.href='viajes.html';">
+            Click Here
+          </button>
     </main>
 </header>
 </body>
