--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
        
     </nav>
     <main class="inicio">
-        <div class="inicio">
-            <a href="viajes.html" class="texto">Haga click para comenzar su viaje!</a>
-        </div>
-        <button onclick="window.location.href='viajes.html';">
-            Click Here
-          </button>
+        <button class="button" onclick="window.location.href='viajes.html';"><span>Inicie su viaje! </span></button>
+        
     </main>
 </header>
 </body>
