--- a/nosotros.html
+++ b/nosotros.html
@@ -47,7 +47,7 @@
         <iframe class="iframe" src="https://maps.google.com/?ll=-34.59827997822874,-58.38694763872986&z=14&t=m&output=embed" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <br>
-      <a href="/contacto.html" class="boton-estilo3">¡Contáctanos!</a>
+      <a href="contacto.html" class="boton-estilo3">¡Contáctanos!</a>
       
     </div>
     
