agregado id footer

--- a/viajes.html
+++ b/viajes.html
@@ -201,7 +201,7 @@
 
     </div>
 </main>
-<footer>
+<footer id="footer">
   <h4 style="color: darkblue;">Horarios de Atencion: 8hrs a 17hrs</h4> &nbsp;
   <h4 style="color: blue;">Telefono: 011 456 45556</h4> &nbsp;
   <h4 style="color: blue;">contact@turismoviajes.com</h4> 
