--- a/nosotros.html
+++ b/nosotros.html
@@ -43,7 +43,6 @@
       <h3>Nos podes encontrar en:</h3>
       <div class="ubicacion">
         <h4>Urugay esquina Paraguay, CABA</h4>
-        
         <iframe class="iframe" src="https://maps.google.com/?ll=-34.59827997822874,-58.38694763872986&z=14&t=m&output=embed" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <br>
@@ -66,4 +65,5 @@
      </footer> 
     </footer>
   </body>
+  <script src="js/tiempo.js"></script>   
 </html>
